# distributed_mpc

./: CMakeLists.txt  README.md  distributed_mpc.kdev4  package.xml
.kdev4/: distributed_mpc.kdev4
include/distributed_mpc/: d_mpc.h
src/distributed_mpc/: d_mpc.cpp  mpc_node.cpp
